--- a/lap_2.html
+++ b/lap_2.html
@@ -3,18 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CH 1 Extend Your Knowledge</title>
+    <title>Wildlife Rescue</title>
 </head>
 <body>
-    <p>Chapter 1, Extend Your Knowledge</p>
-    <p>NTTUyen,  Today's Date</p>
-    <hr>
-    <p>Guideline 1.1 provides an overview of providing text alternative to nontext content, such as images, media, or controls.</p>
-    <p>Guideline 1.2 provides an overview of alternatives for time-based media, such as providing caption or an audio description.</p>
-    <p>Guideline 1.3 provides an overview for creating adaptable content, such as displaying content in a meaningful sequence.</p>
-    <p>Guideline 1.4 provides an overview of how to make web content easy to set and hear. This includes contrasting colors, text spacing, and text seizing.</p>
+    <p>Wild Rescues Website Outline</p>
+    
+    <p>Completed by: NTTUyen</p>
 
+    <p>1) Home Page: The home page will include information about the purpose of Wild Rescues. It will also include the mission 
+        statement, which is to rescue, rehabilitate, and release wildlife back into their natural environment.</p>
 
+    <p>2) About Us Page: The about us page will provide information about the types of animals we rescue and how we help 
+        rehabilitate them.</p>
+
+    <p>3) Partnership Page: The partnership page will provide information about volunteer opportunities, ways to donate, and 
+        sponsorship opportunities.</p>
+
+    <p>4) Gallery Page: The gallery page will include several photos of our most memorable wildlife rescue friends.</p>
+
+    <p>5) FAQs Page: The FAQs page will provide visitors with many frequently asked questions and answers.</p>
+
+    <p>6) Contact Us Page: The contact us page will include the organization’s contact information and provide a form to schedule a 
+        visit.</p>
 
 </body>
 </html>
