--- a/lap _1.html
+++ b/lap _1.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CH 1 Apply Your Knowledge</title>
+    <title>Strike a Chord</title>
 </head>
 <body>
-    <p>Chapter 1, Apply Your Knowledge</p>
-    <p>NTTUyen, Today's Date</p>
+    <p>Proposed Website for Strike a Chord</p>
+    <p>Presented by: NTTUyen</p>
     <hr>
-    <p>I am using Visual Code Studio as my text editor to complete this assignment.</p>
-    <p>Chapter 1 provides an overview of webpage design and all of the design elements that must be taken into consideration when 
-        creating a webpage. Before you begin coding a website, you must first create a wireframe and site map. Next, you need to 
-        consider several design elements, such as graphics, navigation, and color. Finally, you must also plan for accessibility.</p>
-    <p>After reading Chapter 1, I now understand how to download and use a text editor to create an HTML page. I know which HTML 
-        elements are required to create a basic HTML webpage. </p>
-
+    <p>Mission: To provide world-class instruction with each music lesson.</p>
+    <p>Target audience: People ages 3 to 65</p>
+    <p>Linear website structure, pages to include: Home, Lessons, Instructors, Rentals, Contact</p>
+    <p>Graphics: Images that showcase lesson opportunities</p>
+    <p>Colors: Blue, black, white</p>
+    <p>Accessibility: Use text alternatives where necessary</p>
 </body>
 </html>
